# resume-coverletter-saas

./: .gitignore  LICENSE  PROJECT_PROGRESS.md  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01b00bbfb14e_add_ats_optimization_ai_feature.py  043d5d690ef3_create_skills_table.py  22dfc07832d6_create_certifications_table.py  254459f0d1a5_create_users_table.py  25eb30a4f4dd_create_cover_letters_table.py  28ff32872ef3_initial_schema.py  2fe8c934c646_create_resumes_table.py  300c9d5f45e6_create_projects_table.py  33d333ab9961_initial_schema.py  63dc30afd0d1_add_cover_letter_title_unique_constraint.py  6c7718072769_create_ai_usage_table.py  80e15d45842d_create_experiences_table.py  8cc55971582a_create_refresh_tokens_table.py  a49560fad820_create_educations_table.py  a879c2c16ce1_initial_schema.py  b5da2fea84f3_add_generated_resume_fields.py
backend/app/: main.py
backend/app/ai/: base_chat_provider.py  config.py  contracts.py  dependencies.py  exceptions.py  formatters.py  logger.py  openai_provider.py  prompt_registry.py  prompt_service.py  prompts.py  provider_capabilities.py  provider_factory.py  providers.py  retry.py  schemas.py  service.py
backend/app/ai_usage/: dependencies.py  models.py  repository.py  schemas.py  service.py
backend/app/api/: router.py
backend/app/ats/: ai_service.py  dependencies.py  router.py  schemas.py  scoring.py  service.py
backend/app/auth/: dependencies.py  exceptions.py  router.py  schemas.py  security.py  service.py  tokens.py
backend/tests/: conftest.py  utils.py
(+199 files in other folders)
