[project]
name = "resume-coverletter-saas"
version = "0.1.0"
description = "AI Resume & Cover Letter SaaS Backend"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.42",
    "alembic>=1.16.4",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "email-validator>=2.3.0",
    "python-multipart>=0.0.32",
    "fastapi-mail>=1.6.5",
    "authlib>=1.7.2",
    "google-auth>=2.55.1",
    "itsdangerous>=2.2.0",
    "slowapi>=0.1.10",
    "openai>=1.99.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.2",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.1",
    
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]


ignore = [
    "B008",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
